<resources>
    <string name="app_name" translatable="false">GymLogX</string>
    <string name="start_gym">Start</string>
    <string name="stop_gym">Stop</string>
    <string name="history">History</string>
    <string name="add_set">Add set</string>
    <string name="repetitions">Repetitions</string>
    <string name="weight">Weight</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="gym_session">Gym Session</string>
    <string name="workout_history">Workout History</string>
    <string name="exercises">Exercises</string>
    <string name="equipment_barbell">Barbell</string>
    <string name="equipment_dumbbells">Dumbbells</string>
    <string name="equipment_kettlebell">Kettlebell</string>
    <string name="equipment_weight_plate">Weight Plate</string>
    <string name="equipment_bodyweight">Bodyweight</string>
    <string name="equipment_machine">Machine</string>
    <string name="equipment_cable_machine">Cable Machine</string>
    <string name="equipment_plate_loaded_machine">Plate-Loaded Machine</string>
    <string name="equipment_resistance_band">Resistance Band</string>
    <string name="equipment_sandbag">Sandbag</string>
    <string name="equipment_medicine_ball">Medicine Ball</string>
    <string name="equipment_suspension_trainer">Suspension Trainer</string>
    <string name="motion_press_upwards">Press Upwards</string>
    <string name="motion_press_up_middle">Press Up to Middle</string>
    <string name="motion_press_middle">Press Middle</string>
    <string name="motion_press_down_middle">Press Down to Middle</string>
    <string name="motion_press_downwards">Press Downwards</string>
    <string name="motion_pull_upwards">Pull Upwards</string>
    <string name="motion_pull_downwards">Pull Downwards</string>
    <string name="motion_pull_middle">Pull Middle</string>
    <string name="motion_pull_up_middle">Pull Up to Middle</string>
    <string name="motion_pull_down_middle">Pull Down to Middle</string>
    <string name="motion_press_by_legs">Press by legs</string>
    <string name="motion_pull_by_legs">Pull by legs</string>
    <string name="muscle_chest_lower">Chest Lower</string>
    <string name="muscle_chest_upper">Chest Upper</string>
    <string name="muscle_chest">Chest</string>
    <string name="muscle_triceps">Triceps</string>
    <string name="muscle_biceps_arms">Biceps Arms</string>
    <string name="muscle_traps_upper">Trapezius Upper</string>
    <string name="muscle_traps_middle">Trapezius Middle</string>
    <string name="muscle_traps_lower">Trapezius Lower</string>
    <string name="muscle_lats">Latissimus Dorsi</string>
    <string name="muscle_hamstrings">Hamstrings</string>
    <string name="muscle_quadriceps">Quadriceps</string>
    <string name="muscle_glutes">Glutes</string>
    <string name="muscle_delts_rear">Deltoids Rear</string>
    <string name="muscle_delts_side">Deltoids Side</string>
    <string name="muscle_delts_front">Deltoids Front</string>
    <string name="muscle_longissimus">Longissimus Muscle</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="exercise_dip_weighted">Weighted Dips on Parallel Bars</string>
    <string name="exercise_incline_db_press">Incline Dumbbell Press</string>
    <string name="exercise_pullup_weighted">Weighted Pull-Ups</string>
    <string name="exercise_db_row">Dumbbell Row</string>
    <string name="exercise_squat_barbell">Barbell Squat</string>
    <string name="exercise_deadlift">Deadlift</string>
    <string name="motion">Motion</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="equipment_type">Equipment Type</string>
    <string name="head_sorting_exercises">Sort exercises by:</string>
    <string name="head_weight_type">Choice of weight type:</string>
    <string name="head_muscle_group">Choice muscle:</string>
    <string name="head_motion">Choice motion type:</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="name_required">Name is required</string>
    <string name="exercise_updated">Exercise updated successfully</string>
    <string name="update_failed">Failed to update exercise</string>
    <string name="equipment">Equipment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_exercise">Create exercise</string>
    <string name="exercise_added">Exercise added</string>
    <string name="add_failed">Adding failed</string>
    <string name="delete">Delete</string>
    <string name="exercise_deleted">Exercise deleted successfully.</string>
    <string name="delete_failed">Failed to delete the exercise.</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this exercise? This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="expand_details">Show details</string>
    <string name="exe_editor">Exercises Editor</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="day_name" translatable="false">Day %1$d</string>
    <string name="day_groups_count" translatable="false">Groups: %1$d</string>
    <string name="no_exercise_groups">No groups added</string>
    <string name="edit_day">Edit training</string>
    <string name="delete_day">Delete training</string>
    <string name="description">Description</string>
    <string name="plan_management_title">Fitness Programs</string>
    <string name="add_new_plan">Add New</string>
    <string name="edit_plan">Edit Program Name</string>
    <string name="enter_plan_name">Enter plan name</string>
    <string name="add_new_day">Add New Gym Session</string>
    <string name="new_program">New Program</string>
    <string name="create_gym_session">Create Gym Session</string>
    <string name="_save_block">Save exercises block</string>
    <string name="descr_block">Training block description</string>
    <string name="training_block_name">Name of training block</string>
    <string name="train_block_edit">Edit of training block</string>
    <string name="editing_training_blocks">Editing training blocks</string>
    <string name="editing_the_plan">Editing the plan</string>
    <string name="name_of_the_plan">Name of the plan</string>
    <string name="description_of_the_plan">Description of the plan</string>
    <string name="add_a_training_day">Add a training day</string>
    <string name="save_the_plan">Save the plan</string>
    <string name="edit_name_description">Edit name and description</string>
    <string name="do_you_really_want_to_delete">Do you really want to delete? \"</string>
    <string name="confirm_deletion">Confirm deletion!</string>
    <string name="edit">Edit</string>
    <string name="deleted_day">Deleted Gym Session</string>
    <string name="gym_sessions">Gym Sessions</string>
    <string name="add_training_block">Add training block</string>
    <string name="app_settings">Settings</string>
    <string name="programs">Programs</string>
    <string name="exercises_edit">Edit Exercises</string>
    <string name="exe_list">List of Exercises</string>
    <string name="training_blocks">Training Blocks</string>
    <string name="save">Save</string>
    <string name="moove_type">Mooving</string>
    <string name="muscles">Muscles</string>
    <string name="select">Select</string>
    <string name="title">Title</string>
    <string name="exercise">Exercise</string>
    <string name="chose">Chose</string>
    <string name="chosed">Chosed</string>
    <string name="set_name">Set name</string>
    <string name="no_description">No description!</string>
    <string name="program_title">Program Title</string>
    <string name="delete_training_block">Delete this training block</string>
    <string name="no_training_blocks_available">No training blocks available</string>
    <string name="add_exercise_to_blocks">Add exercise to blocks</string>
    <string name="add">Add</string>
    <string name="exercise_added_to_selected_blocks">Exercise added to selected blocks!</string>
    <string name="no_block_selected">No block selected</string>
    <string name="do_not_add">Do not add</string>
    <string name="context_menu">Context menu</string>
    <string name="clone_exercise">Clone exercise</string>
    <string name="clone">Clone</string>
    <string name="edit_programs">Programs Editor</string>
    <string name="select_motion">Select motion</string>
    <string name="select_muscle_groups">Select muscle groups</string>
    <string name="select_equipment">Select equipment</string>
    <string name="please_select_all_filters">Chose all selections</string>
    <string name="menu">Menu</string>
    <string name="exe_attribute">Attribute exercise</string>
    <string name="header_free_weights">Free weights</string>
    <string name="header_machines">Machines</string>
    <string name="header_others">Other</string>
    <string name="press">Press</string>
    <string name="pull">Pull</string>
    <string name="press_pull_by_legs">Legs</string>
    <string name="muscles_traps">Traps</string>
    <string name="latissimus_dorsi_muscle">Latissimus dorsi muscle</string>
    <string name="muscles_arms">Arms</string>
    <string name="muscles_delts">Delts</string>
    <string name="muscles_legs">Legs</string>
    <string name="muscles_back_other">Back other</string>
    <string name="total_time">Total time:</string>
    <string name="since_last_set_time">Since last set:</string>
</resources>