<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit_exercises"
        android:title="@string/exercises_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_exercise"
        android:title="@string/add_exercise"
        android:icon="@drawable/ic_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_edit_block"
        android:title="@string/train_block_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete_block"
        android:title="@string/delete_training_block"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />




</menu>