<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_on_primary_container"
        android:padding="16dp">

        <!-- Назва блоку -->
        <EditText
            android:id="@+id/editTextBlockName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/fab_tint"
            android:ellipsize="end"
            android:hint="@string/training_block_name"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/fab_tint"
            android:textColorHint="@color/fab_tint"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Опис блоку -->
        <EditText
            android:id="@+id/editTextBlockDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/fab_tint"
            android:ellipsize="end"
            android:hint="@string/descr_block"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="6"
            android:textColor="@color/fab_tint"
            android:textColorHint="@color/fab_tint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextBlockName" />

        <!-- Фільтри -->

        <Button
            android:id="@+id/buttonSelectMotion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/my_on_secondary_container"
            android:text="@string/moove_type"
            android:textColor="@color/fab_tint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBlockDescription" />

        <Button
            android:id="@+id/buttonSelectMuscle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/my_on_secondary_container"
            android:text="@string/muscle_groups"
            android:textColor="@color/fab_tint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelectMotion" />

        <!-- Кнопки "Скасувати" та "Зберегти" -->
        <Button
            android:id="@+id/buttonSelectEquipment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/my_on_secondary_container"
            android:text="@string/equipment_type"
            android:textColor="@color/fab_tint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelectMuscle" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/my_on_secondary_container"
            android:text="@string/cancel"
            android:textColor="@color/fab_tint"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSelectEquipment" />

        <Button
            android:id="@+id/buttonSaveBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/my_on_secondary_container"
            android:text="@string/save"
            android:textColor="@color/fab_tint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelectEquipment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>